test/parse/module/bad-module-with-assert.txt
;;; ERROR: 1
(module (func (export "f")))

;; Can't use assert_return when parsing a .wat file.
(assert_return (invoke "f"))
(;; STDERR ;;;
out/test/parse/module/bad-module-with-assert.txt:5:1: error: unexpected token (, expected EOF.
(assert_return (invoke "f"))
^
;;; STDERR ;;)
